Warp modifier with custom curve is clamped to 0-1 #43524

Closed
opened 2015-02-02 02:30:07 +01:00 by Daniel Salazar · 7 comments
Member

Blender Version

Broken: 64124ba

Short description of error

Warp modifier seems to be clamping all values below 0, even if the custom curve is drawn in negative space. This quite limits the usefulness of the custom curve.

It's also clamping all values that go above 1 which makes strength's higher than 1 rather pointless too!

Exact steps for others to reproduce the error

Bug.blend

**Blender Version** Broken: 64124ba **Short description of error** Warp modifier seems to be clamping all values below 0, even if the custom curve is drawn in negative space. This quite limits the usefulness of the custom curve. It's also clamping all values that go above 1 which makes strength's higher than 1 rather pointless too! **Exact steps for others to reproduce the error** [Bug.blend](https://archive.blender.org/developer/F140352/Bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Campbell Barton was assigned by Daniel Salazar 2015-02-02 03:03:33 +01:00
Author
Member

I've somehow managed to create a patch for my own report. Hopefully it's alright and can be merged!

I've somehow managed to create a patch for my own report. Hopefully it's alright and can be merged!
Daniel Salazar changed title from Warp modifier with custom curve refuses to go below zero to Warp modifier with custom curve is clamped to 0-1 2015-02-02 06:39:42 +01:00

This issue was referenced by d0ae2624f5

This issue was referenced by d0ae2624f5e8207ac4d1db0d55d9084ed3e0e2a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d0ae2624f5.

Closed by commit d0ae2624f5.

This issue was referenced by d20d825de4a81874225f8493dd573134e369ea37

This issue was referenced by d20d825de4a81874225f8493dd573134e369ea37
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43524
No description provided.