Fix T43524: Warp modifier curve clamped to 0-1